k8s/complex/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app-gateway
spec:
  replicas: 3
  selector:
    matchLabels:
      component: app-gateway
  template:
    metadata:
      labels:
        component: app-gateway
    spec:
      containers:
        - name:  app-gateway
          image: mozafaq/test-app-gateway:1.5
          imagePullPolicy: Always
          ports:
            - containerPort: 9011
          livenessProbe:
            httpGet:
              path: /status
              port: 9011
            initialDelaySeconds: 30
            timeoutSeconds: 1
