k8s/complex/gateway-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-cluster-ip-service

spec:
  type: ClusterIP
  ports:
    - port: 9011
      targetPort: 9011
  selector:
    component: app-gateway
