k8s/complex/ingress-service.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-cluster-ip-service
                port:
                  number: 9011
          - path: /controller/
            pathType: Prefix
            backend:
              service:
                name: worker-controller-cluster-ip-service
                port:
                  number: 9031
